CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(CMD_EXE)

FILE(GLOB_RECURSE CMD_EXE_SRC
		"${PROJECT_SOURCE_DIR}/*.cpp"
		"${PROJECT_SOURCE_DIR}/*.h")

ADD_EXECUTABLE(CMD_EXE ${CMD_EXE_SRC})

SET_PROPERTY(TARGET CMD_EXE PROPERTY CXX_STANDARD 17)

SET(CMD_INCLUDE_DIRS 
    "${PROJECT_SOURCE_DIR}/include/"
    "${ENGINE_INCLUDE_DIRS}"
    )

TARGET_INCLUDE_DIRECTORIES(CMD_EXE PUBLIC ${CMD_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(CMD_EXE Engine)