CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(ENGINE)

FILE(GLOB_RECURSE ENGINE_SRC
		"${PROJECT_SOURCE_DIR}/*.cpp"
		"${PROJECT_SOURCE_DIR}/*.h")

ADD_LIBRARY(Engine ${ENGINE_SRC})

SET_PROPERTY(TARGET Engine PROPERTY CXX_STANDARD 17)

SET(ENGINE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")

TARGET_INCLUDE_DIRECTORIES(Engine PUBLIC ${ENGINE_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(Engine PUBLIC glm spdlog_header_only thread_pool)